tests/negative/closure_capture_assign.far
fun main() -> i64 {
  n = 0
  inc = fn(x) { n = n + 1; return n }
  return inc(0)
}
